fix logo width and navbar on mobile
CSS priority error

--- a/assets/sass/logo.scss
+++ b/assets/sass/logo.scss
@@ -2,7 +2,7 @@
 @import "libs/functions";
 
 #logo {
-  width: 100%;
+  width: 90%;
   text-align: center;
   position: relative;
   top: 1.5em;
